fix vh bug on mobile.

--- a/style.css
+++ b/style.css
@@ -684,10 +684,6 @@ video {
   width: 10rem;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
-
 .w-\[90\%\] {
   width: 90%;
 }
